fix ticket description overflow

--- a/src/components/Ticket/TicketInfo/ticket-info.module.scss
+++ b/src/components/Ticket/TicketInfo/ticket-info.module.scss
@@ -274,3 +274,10 @@
     text-decoration: underline;
   }
 }
+
+.text {
+  max-height: 300px;
+  max-width: 55vw;
+  overflow: auto;
+  margin: 0 auto;
+}
